--- a/mock2/private/style/scss/contacts/_contacts.scss
+++ b/mock2/private/style/scss/contacts/_contacts.scss
@@ -4,22 +4,22 @@
   justify-content: space-between;
 
   &__text {
+    @include font-settings("Playfair Display", 14px, 400, null);
     margin-right: 10px;
     color: $color-text-logo-primary;
-    font-family: "Playfair Display";
-    font-size: 14px;
-    font-weight: 400;
     line-height: 24px;
     text-decoration: none;
+
     &:hover {
       opacity: .5;
     }
   }
 
   &__icon {
-    text-decoration: none;
     width: 14px;
     margin-right: 10px;
+    text-decoration: none;
+
     &:hover {
       opacity: .5;
     }
