--- a/mock2/private/style/scss/global/_mixins.scss
+++ b/mock2/private/style/scss/global/_mixins.scss
@@ -3,3 +3,10 @@
     @content;
   }
 }
+
+@mixin font-settings($family, $size, $weight, $transform) {
+  font-family: $family;
+  font-size: $size;
+  font-weight: $weight;
+  text-transform: $transform;
+}
