--- a/mock2/private/style/scss/sign-up/_sign-up.scss
+++ b/mock2/private/style/scss/sign-up/_sign-up.scss
@@ -12,7 +12,7 @@
     margin-top: 70px;
     color: $color-text-sign-up-primary;
     font-size: 30px;
-    letter-spacing: 0.75px;
+    letter-spacing: .75px;
     text-align: center;
   }
 
@@ -20,19 +20,17 @@
     display: flex;
     margin-top: 80px;
     max-width: 400px;
-    border-bottom: 1px solid #000000;
+    border-bottom: 1px solid $color-text-logo-primary;
   }
 
   &__input {
+    @include font-settings("Playfair Display", 14px, 400, null);
     flex-grow: 1;
     border: none;
     background: inherit;
     width: auto;
     color: $color-text-primary;
     line-height: 24px;
-    font-family: "Playfair Display";
-    font-size: 14px;
-    font-weight: 400;
     outline: none;
   }
 
@@ -43,9 +41,10 @@
   }
 
   &__icon {
-    cursor: pointer;
     width: 32px;
     height: 17px;
+    cursor: pointer;
+
     &:hover {
       opacity: .5;
     }
